--- a/nghi.html
+++ b/nghi.html
@@ -9,7 +9,7 @@
 
 <body>
     <audio controls autoplay loop>
-        <source src="assets/Music/HappyNewYear-ABBA_3rkqc.mp3">
+        <source src="assets/css/HappyNewYear-ABBA_3rkqc.mp3">
     </audio>
     <div class="birthday">
         <div class="birthday_inner">
@@ -22,28 +22,28 @@
               <img class="intro" src="" />
               <div class="gallery">
                 <span style="--i:1">
-                  <img src="assets/img/1.jpg" alt="" />
+                  <img src="assets/css/1.jpg" alt="" />
                 </span>
                 <span style="--i:2">
-                  <img src="assets/img/2.jpg" alt="" />
+                  <img src="assets/css/2.jpg" alt="" />
                 </span>
                 <span style="--i:3">
-                  <img src="assets/img/4.jpg" alt="" />
+                  <img src="assets/css/4.jpg" alt="" />
                 </span>
                 <span style="--i:4">
-                  <img src="assets/img/5.jpg" alt="" />
+                  <img src="assets/css/5.jpg" alt="" />
                 </span>
                 <span style="--i:5">
-                  <img src="assets/img/6.jpg" alt="" />
+                  <img src="assets/css/6.jpg" alt="" />
                 </span>
                 <span style="--i:6">
-                  <img src="assets/img/7.jpg" alt="" />
+                  <img src="assets/css/7.jpg" alt="" />
                 </span>
                 <span style="--i:7">
-                  <img src="assets/img/10.jpg" alt="" />
+                  <img src="assets/css/10.jpg" alt="" />
                 </span>
                 <span style="--i:8">
-                  <img src="assets/img/9.jpg" alt="" />
+                  <img src="assets/css/9.jpg" alt="" />
                 </span>
               </div>
             </div>
@@ -54,7 +54,7 @@
     <div class="happy">
 
       <div class="happy-year">
-        <img src="assets/img/10-12.jpg">
+        <img src="assets/css/10-12.jpg">
       </div>
       
       
