--- a/nghi.html
+++ b/nghi.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quyểnn Nghi</title>
+    <title>Quyển Nghi</title>
     <link rel="stylesheet" href="assets/css/tang.css">
 </head>
 
